--- a/team.html
+++ b/team.html
@@ -16,9 +16,9 @@
 	<div class="container">
 		<h1>My team</h1>
 
-		<ul> class="listing-line"
+		<ul class="list-inline">
 			<li>
-				< src="https://avatars0.githubusercontent.com/u/52039232?v=4" alt=""> 
+				<img src="https://avatars0.githubusercontent.com/u/52039232?v=4" alt="" class="img-circle"> 
 				<p>Pauline</p>
 			</li>
 		</ul>
